# secret_santa

./: .gitignore  LICENSE  README.md  pyproject.toml
secret_santa/: santa.py
