[tool.poetry]
name = "secret-santa"
version = "0.1.0"
description = ""
authors = ["Nicolas Delaby <ticosax@pm.me>"]
readme = "README.md"
packages = [{ include = "secret_santa" }]
license = "MIT"

[tool.poetry.dependencies]
python = "3.11"
click = "*"
ortools = "*"

[tool.poetry.scripts]
santa = "secret_santa.santa:assign_pairs"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"

[tool.ruff]
line-length = 88
target-version = "py311"
extend-ignore = ["S101", "TRY003", "ISC001", "T201"]
extend-select = [
  "I",
  "UP",
  "C4",
  "B",
  "SIM",
  "TCH",
  "S",
  "N",
  "A",
  "T10",
  "ISC",
  "ICN",
  "G",
  "PIE",
  "T20",
  "PYI",
  "RSE",
  "TID",
  "PGH",
  "PL",
  "TRY",
  "RUF",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
