[project]
name = "secret-santa"
version = "0.1.0"
description = ""
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<3.13"
dependencies = ["click", "ortools"]

[dependency-groups]
dev = ["ruff"]

[tool.ruff]
line-length = 88
target-version = "py312"
[tool.ruff.lint]
extend-ignore = ["S101", "TRY003", "ISC001", "T201"]
extend-select = [
  "I",
  "UP",
  "C4",
  "B",
  "SIM",
  "S",
  "N",
  "A",
  "T10",
  "ISC",
  "ICN",
  "G",
  "PIE",
  "T20",
  "PYI",
  "RSE",
  "TID",
  "PGH",
  "PL",
  "TRY",
  "RUF",
]
